# exam-tracker

./: .gitignore  README.md
fastapi-backend/: .env.example  Dockerfile  Makefile  alembic.ini  main.py  pyproject.toml  seed_data.py
fastapi-backend/alembic/: env.py
fastapi-backend/alembic/versions/: 1327e7a71e64_restructure_student_table.py  8492e0f877f0_initial_tables.py
fastapi-backend/app/api/: __init__.py  students.py
fastapi-backend/app/core/: config.py  database.py
fastapi-backend/app/crud/: student.py
fastapi-backend/app/models/: student.py
fastapi-backend/app/schemas/: student.py
frontend/: Dockerfile  Makefile  next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/statistics/: route.ts
frontend/src/app/api/students/score/[registrationNumber]/: route.ts
frontend/src/app/api/students/top10-group-a/: route.ts
frontend/src/components/: ScoreChecker.tsx  Statistics.tsx  TopStudents.tsx
frontend/src/lib/: database-schema.ts
